# search-engine

./: CMakeLists.txt  DSHashTable.h  DSHashTableTests.cpp  DSTree.h  Index.cpp  Index.h  IndexHandler.cpp  IndexHandler.h  Metadata.cpp  Metadata.h  QueryHandler.cpp  QueryHandler.h  Runner.cpp  Runner.h  Title.cpp  Title.h  TreeTest.cpp  Word.cpp  Word.h  catch.hpp  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  stopwords.txt
